--- a/css/style.less
+++ b/css/style.less
@@ -101,7 +101,7 @@ body{
     .padding;
     margin: 0 3% 0 0;
 }
-#title_book, #title_author, #title_friend, #title_until{
+#title_book, #title_author, #title_friend, #datepicker{
     width: 100%;
     .border(transparent);
     .border_bot(@bg_head);
@@ -210,8 +210,6 @@ body{
     top: 2%;
     right: 2%;
 }
-
-
 .checkbox input[type=checkbox] {
 	display:none;
 }
